The data is read using url

--- a/Indiviual_Planning.ipynb
+++ b/Indiviual_Planning.ipynb
@@ -340,8 +340,12 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "players = pd.read_csv('data/players.csv')\n",
-    "sessions = pd.read_csv('data/sessions.csv')\n",
+    "players_url = 'https://drive.google.com/file/d/1Mw9vW0hjTJwRWx0bDXiSpYsO3gKogaPz/view?usp=sharing'\n",
+    "players_path = 'https://drive.google.com/uc?export=download&id='+players_url.split('/')[-2]\n",
+    "players = pd.read_csv(players_path)\n",
+    "sessions_url = 'https://drive.google.com/file/d/14O91N5OlVkvdGxXNJUj5jIsV5RexhzbB/view?usp=sharing'\n",
+    "sessions_path = 'https://drive.google.com/uc?export=download&id='+sessions_url.split('/')[-2]\n",
+    "sessions = pd.read_csv(sessions_path)\n",
     "players"
    ]
   },
@@ -572,23 +576,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-9f7cc15aab0143439ab056fe833582e3.vega-embed {\n",
+       "  #altair-viz-aa35049d28f84221af387f61f7b5e4c8.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-9f7cc15aab0143439ab056fe833582e3.vega-embed details,\n",
-       "  #altair-viz-9f7cc15aab0143439ab056fe833582e3.vega-embed details summary {\n",
+       "  #altair-viz-aa35049d28f84221af387f61f7b5e4c8.vega-embed details,\n",
+       "  #altair-viz-aa35049d28f84221af387f61f7b5e4c8.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-9f7cc15aab0143439ab056fe833582e3\"></div>\n",
+       "<div id=\"altair-viz-aa35049d28f84221af387f61f7b5e4c8\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-9f7cc15aab0143439ab056fe833582e3\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-9f7cc15aab0143439ab056fe833582e3\");\n",
+       "    if (outputDiv.id !== \"altair-viz-aa35049d28f84221af387f61f7b5e4c8\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-aa35049d28f84221af387f61f7b5e4c8\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -669,23 +673,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-27a77a9527344eddb6fd60e55662b0ce.vega-embed {\n",
+       "  #altair-viz-f3be3b6a283f480f81d9420f89ac03ea.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-27a77a9527344eddb6fd60e55662b0ce.vega-embed details,\n",
-       "  #altair-viz-27a77a9527344eddb6fd60e55662b0ce.vega-embed details summary {\n",
+       "  #altair-viz-f3be3b6a283f480f81d9420f89ac03ea.vega-embed details,\n",
+       "  #altair-viz-f3be3b6a283f480f81d9420f89ac03ea.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-27a77a9527344eddb6fd60e55662b0ce\"></div>\n",
+       "<div id=\"altair-viz-f3be3b6a283f480f81d9420f89ac03ea\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-27a77a9527344eddb6fd60e55662b0ce\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-27a77a9527344eddb6fd60e55662b0ce\");\n",
+       "    if (outputDiv.id !== \"altair-viz-f3be3b6a283f480f81d9420f89ac03ea\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-f3be3b6a283f480f81d9420f89ac03ea\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -767,23 +771,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-2cb90c85d0484168b8124611a6877bc4.vega-embed {\n",
+       "  #altair-viz-f6d5205c12e64d5592cfc3e9f96b80e7.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-2cb90c85d0484168b8124611a6877bc4.vega-embed details,\n",
-       "  #altair-viz-2cb90c85d0484168b8124611a6877bc4.vega-embed details summary {\n",
+       "  #altair-viz-f6d5205c12e64d5592cfc3e9f96b80e7.vega-embed details,\n",
+       "  #altair-viz-f6d5205c12e64d5592cfc3e9f96b80e7.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-2cb90c85d0484168b8124611a6877bc4\"></div>\n",
+       "<div id=\"altair-viz-f6d5205c12e64d5592cfc3e9f96b80e7\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-2cb90c85d0484168b8124611a6877bc4\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-2cb90c85d0484168b8124611a6877bc4\");\n",
+       "    if (outputDiv.id !== \"altair-viz-f6d5205c12e64d5592cfc3e9f96b80e7\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-f6d5205c12e64d5592cfc3e9f96b80e7\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -937,14 +941,6 @@
     "f- Data Splitting:\n",
     "* Split the data into training (70%) and testing (30%) sets."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b413bdc-653f-4387-a11f-c5f86f6f1124",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
